--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "formik": "^2.4.6",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-easy-crop": "^5.5.0",
     "react-icons": "^5.5.0",
+    "react-image-crop": "^11.0.10",
     "react-router": "^7.8.2",
     "tailwindcss": "^4.1.12",
     "yup": "^1.7.0"
